# autocoder

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json
.github/workflows/: autocode.yml
src/: index.ts  main.rs  types.ts
src-rust/: Cargo.toml
src-rust/src/: lib.rs  main.rs
src-rust/src/direct_github/: determine_branch_prefix.rs  get_issue.rs  mod.rs  process_issue.rs  read_style_guide.rs
src-rust/src/github/: github.rs
src-rust/src/github/types/: commit.rs  create_file_response.rs  file_content.rs  github_error.rs  github_user.rs  issue.rs  label.rs  mod.rs  pull_request.rs  reference.rs  repository.rs  user.rs
src-rust/src/mcp/: app_config.rs  mcp.rs  mod.rs  prompt.rs
src-rust/src/utils/: app_error.rs
src-rust/tests/: mcp_integration_test.rs  mcp_test.rs  mod.rs  prompt_test.rs
src/anthropic/: createMessage.ts
src/errors/: handlers.ts  isBranchExistsError.ts  isNotFoundError.ts  isRateLimitError.ts  types.ts
src/mcp/: app_config.rs  availableTools.ts  disconnect.ts  handleToolResults.ts  handleToolUse.ts  initialize.ts  mcp.rs  prompt.rs
src/mcp/__tests__/: handleToolResults.test.ts
src/processors/issue/: formatError.ts  getInitialPrompt.ts  processIssue.ts  prompt.ts  types.ts
src/processors/issue/__tests__/: processIssue.test.ts
src/schema/: index.ts
tests/: mod.rs
