[package]
name = "autocode-github-action"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
mockall = "0.13.1"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
octocrab = "0.32"
anthropic = "0.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
